feat: add currency list endpoint
